[gd_scene load_steps=8 format=2]

[ext_resource path="res://mystartdesign.png" type="Texture" id=1]
[ext_resource path="res://Introduction.gd" type="Script" id=2]
[ext_resource path="res://introMusic.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 85, 33.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 86, 34.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 86, 34 )

[sub_resource type="CircleShape2D" id=4]
radius = 77.0065

[node name="Introduction" type="Node2D"]
script = ExtResource( 2 )

[node name="Mystartdesign" type="Sprite" parent="."]
position = Vector2( 508, 292 )
scale = Vector2( 0.8125, 0.852778 )
texture = ExtResource( 1 )

[node name="StoryButton" type="Area2D" parent="."]
position = Vector2( 653, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoryButton"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="PlayButton" type="Area2D" parent="."]
position = Vector2( 652, 289 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayButton"]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="HowToButton" type="Area2D" parent="."]
position = Vector2( 656, 391 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HowToButton"]
position = Vector2( -3, 5 )
shape = SubResource( 3 )

[node name="ExitButton" type="Area2D" parent="."]
position = Vector2( 931, 497 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitButton"]
shape = SubResource( 4 )

[node name="introMusic" parent="." instance=ExtResource( 3 )]

[connection signal="input_event" from="StoryButton" to="." method="_on_StoryButton_input_event"]
[connection signal="input_event" from="PlayButton" to="." method="_on_PlayButton_input_event"]
[connection signal="input_event" from="HowToButton" to="." method="_on_HowToButton_input_event"]
[connection signal="input_event" from="ExitButton" to="." method="_on_ExitButton_input_event"]
